fix: 移除dashboard box 的 overflow: hidden;

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,7 +9,6 @@
 }
 
 .dashboard__box {
-    overflow: hidden;
     padding: 10px;
     border-radius: 8px;
     background: #fff;
